--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.1.2",
+    "redux": "^3.1.6",
+    "redux-logger": "^2.4.0",
+    "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
